# PID_ROS

src/Unit2/my_controller_unit2_unit3_pid/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit2/planar_2dof_unit2/: CMakeLists.txt  CMakeLists_velocity.txt  package.xml
src/Unit2/planar_2dof_unit2/launch/: main.launch  (+4 more)
src/Unit3/my_controller_unit2_unit3_pid/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit3/my_controller_unit3_LSBP/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit3/my_controller_unit3_traj_int/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit3/planar_2dof_unit3/: CMakeLists.txt  package.xml
src/Unit4/my_controller_unit4_PD/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit4/my_controller_unit4_inverse_dynamics/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit4/planar_2dof_unit4/: CMakeLists.txt  package.xml
src/Unit5/my_controller_unit5/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit5/planar_2dof_unit5/: CMakeLists.txt  package.xml
src/Unit5/planar_2dof_unit5/config/: planar_2dof_control.yaml
src/Unit5/planar_2dof_unit5/launch/: main.launch  planar_2dof_control.launch  rviz.launch  spawn.launch  start_world.launch
src/Unit5/planar_2dof_unit5/src/: force.cpp
src/Unit5/planar_2dof_unit5/urdf/: planar_2dof.gazebo  planar_2dof.xacro
src/Unit6/my_controller_unit6/: CMakeLists.txt  controller_plugins.xml  package.xml
src/Unit6/planar_2dof_unit6/: CMakeLists.txt  package.xml
src/control_exercises/: exercise_2-3-1.py  exercise_2-5-1.py
(+39 files in other folders)
